[#17512][yugabyted-ui] Code changes to add /gflags API
Summary:
Adding support in the API server to retrieve the gflags of each node in the cluster. This is also
required to avoid node.js app directly inovking the Master and Tserver UI instead of the API server.

Test Plan: manual testing

Reviewers: sgarg-yb

Reviewed By: sgarg-yb

Subscribers: nikhil

Differential Revision: https://phorge.dev.yugabyte.com/D26275
