# yugabyted-ui/apiserver/cmd/server/main.go
@@ -208,6 +208,9 @@ func main() {
         // GetIsLoadBalancerIdle - Check if cluster load balancer is idle
         e.GET("/api/is_load_balancer_idle", c.GetIsLoadBalancerIdle)
 
+        // GetIsLoadBalancerIdle - Check if cluster load balancer is idle
+        e.GET("/api/gflags", c.GetGflagsJson)
+
         render_htmls := templates.NewTemplate()
 
         // Code for rendering UI Without embedding the files
