# yugabyted-ui/apiserver/conf/openapi/paths/cluster_info.yaml
@@ -200,3 +200,26 @@
         $ref: '../responses/_index.yaml#/ApiError'
       '500':
         $ref: '../responses/_index.yaml#/ApiError'
+/gflags:
+  get:
+    summary: Get gflags of master and tserver process
+    description: Retrieve gflags of master and tserver process
+    operationId: getGflags
+    tags:
+      - cluster-info
+    parameters:
+      - name: node_address
+        in: query
+        description: Specify the node ip-address from where gflags are retrieved
+        required: true
+        style: form
+        explode: false
+        schema:
+          type: string
+    responses:
+      '200':
+        $ref: '../responses/_index.yaml#/GflagsResponse'
+      '400':
+        $ref: '../responses/_index.yaml#/ApiError'
+      '500':
+        $ref: '../responses/_index.yaml#/ApiError'
